--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
+altgraph==0.17
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+cx-Freeze==6.6
+cx-Logging==3.0
+future==0.18.2
 idna==2.10
+importlib-metadata==4.5.0
+macholib==1.14
+pefile==2021.5.24
+PyInstaller==3.4
 PyQt5==5.15.4
 pyqt5-plugins==5.15.4.2.1.0
 PyQt5-Qt5==5.15.2
@@ -9,7 +17,9 @@ PyQt5-sip==12.8.1
 PyQt5-stubs==5.15.2.0
 pyqt5-tools==5.15.4.3.0.3
 python-dotenv==0.17.1
+pywin32-ctypes==0.2.0
 qt5-applications==5.15.2.2.1
 qt5-tools==5.15.2.1.0.1
 requests==2.25.1
 urllib3==1.26.4
+zipp==3.4.1
